Fixed horizontal scrollbar shwoing when Navigation component is added

--- a/src/components/Organisms/Navigation/Navigation.module.scss
+++ b/src/components/Organisms/Navigation/Navigation.module.scss
@@ -7,7 +7,6 @@ $nav-list-2--position: $nav-links-1--ypadding + 4.5rem; // FOR POSITIONING DROPD
 
 
 .header {
-    width: 100vw;
     background-color: $color--nav-bg;
 }
 .navbar {
